--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .centered-main-page-element {
   display: block;
   width: 500px;
-  margin: 0 auto 0;
+  margin: 0 auto;
 }
 
 .task {
@@ -46,7 +46,7 @@ body {
 
 ul {
   margin: 0;
-  padding: 0px;
+  padding: 0;
 }
 
 li, h3 {
@@ -59,7 +59,7 @@ input,button{
 
 button {
   background: none;
-  border: 0px;
+  border: 0;
   color: #888;
   font-size: 15px;
   width: 60px;
