refactor: rename css rules to rule 3.4 in clean-code-s1e1.md

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   text-align: right;
 }
 
-.aaa img {
+.header__img {
   width: 100%;
 }
 
@@ -59,7 +59,7 @@ button {
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0;
   color: #888;
@@ -69,14 +69,14 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
 
-h3,
-label[for="new-task"] {
+.h3,
+.new-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -86,7 +86,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -99,80 +99,75 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.text:focus {
   color: #333;
 }
 
 /* New Task */
 
-label[for="new-task"] {
+.new-task {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
 
-li {
+.list {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-li > * {
-  vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.text {
   width: 226px;
 }
 
-button.delete img {
+.close {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.close:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
 
-ul#completed-tasks label {
+#completed-tasks .label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 
-ul li input[type=text] {
+.list .text {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.editMode .text {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.editMode .label {
   display: none;
 }
