refactor: rename class with BEM to rule 3.1 and rule advanced 2.1 in clean-code-s1e1.md

--- a/css/style.css
+++ b/css/style.css
@@ -164,11 +164,11 @@ button {
   display: none;
 }
 
-.editMode .task__text {
+.task-list__edit .task__text {
   display: inline-block;
   width: 224px;
 }
 
-.editMode .task__label {
+.task-list__edit .task__label {
   display: none;
 }
