refactor: rename class with BEM to rule 3.1 and rule advanced 2.1 in clean-code-s1e1.md

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ button {
 
 /* Completed */
 
-#completed-tasks .task__label {
+.tasks-list__complete .task__label {
   text-decoration: line-through;
   color: #888;
 }
